--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header>
+        <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px]">
+
+        </nav>
+    </header>
 </body>
 </html>
