header-nav-bar  adjusted and subcontainers outlined

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>Album example for Bootstrap</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px]">
-
+        <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px] flex items-center justify-center">
+            <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] bg-[#007BFF]">
+                <div id="juli-nb-icon-title-box" class="flex items-center w-[90.58px] h-[40px] justify-center gap-2">
+                    <img class="w-[20px] h-[20px]" src="./assets/img/camera-svgrepo-com.png" alt="camera-svgrepo-com">
+                    <strong class="text-white text-[20px]">Album</strong>
+                </div>
+            </div>
         </nav>
     </header>
 </body>
