icon, title and burguer menu inserted and adjusted in the nav-bar

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 <body>
     <header>
         <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px] flex items-center justify-center">
-            <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] bg-[#007BFF]">
+            <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] bg-[#007BFF] flex justify-between">
                 <div id="juli-nb-icon-title-box" class="flex items-center w-[90.58px] h-[40px] justify-center gap-2">
                     <img class="w-[20px] h-[20px]" src="./assets/img/camera-svgrepo-com.png" alt="camera-svgrepo-com">
                     <strong class="text-white text-[20px]">Album</strong>
+                </div>
+                <div id="juli-burguer-menu" class="w-[55.6px] h-[39.6px] rounded border border-solid border-white flex flex-col justify-evenly gap-x-1 items-center">
+                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
+                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
+                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
                 </div>
             </div>
         </nav>
