hero section created

--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
 <body>
     <header>
         <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px] flex items-center justify-center">
-            <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] bg-[#007BFF] flex justify-between">
+            <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] flex justify-between">
                 <div id="juli-nb-icon-title-box" class="flex items-center w-[90.58px] h-[40px] justify-center gap-2">
-                    <img class="w-[20px] h-[20px]" src="./assets/img/camera-svgrepo-com.png" alt="camera-svgrepo-com">
+                    <img class="w-[28px] h-[28px]" src="./assets/img/camera-svgrepo-com.png" alt="camera-svgrepo-com">
                     <strong class="text-white text-[20px]">Album</strong>
                 </div>
-                <div id="juli-burguer-menu" class="w-[55.6px] h-[39.6px] rounded border border-solid border-white flex flex-col justify-evenly gap-x-1 items-center">
-                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
-                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
-                    <span class="border border-solid border-white w-[25px] h-[1px] rounded"></span>
+                <div id="juli-burguer-menu" class="w-[55.6px] h-[39.6px] rounded border border-solid border-[#494E53] flex flex-col justify-evenly gap-x-1 items-center">
+                    <span class="border border-solid border-[#9A9DA0] w-[25px] h-0 rounded"></span>
+                    <span class="border border-solid border-[#9A9DA0] w-[25px] h-0 rounded"></span>
+                    <span class="border border-solid border-[#9A9DA0] w-[25px] h-0 rounded"></span>
                 </div>
             </div>
         </nav>
     </header>
+    <section id="juli-hero-section" class="w-full h-[407.6px] bg-[#0069D9] py-24 px-8 flex justify-center items-center">
+        <div id="juli-hero-container" class="w-[640px] h-[215.6px] bg-[#FFFFFF] flex flex-col justify-center items-center">
+            <h1 class="text-[2.5rem] text-center text-light font-sans font-mono">Album example</h1>
+            <p class="text-center text-[20px] font-sans text-[#6c757d] text-[1.25rem] font-light">Something short and leading about the collection below—its contents,<br>the creator, etc. Make it short and sweet, but not too short so folks don't<br>simply skip over it entirely.</p>
+            <div class="juli-hero-bttns-container">
+                <button>Main call to action</button>
+                <button>Secondary action</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
