--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
         <div id="juli-hero-container" class="w-[640px] h-[215.6px] bg-[#FFFFFF] flex flex-col justify-center items-center">
             <h1 class="text-[2.5rem] text-center text-light font-sans mb-2">Album example</h1>
             <p class="mb-4 text-center text-[20px] font-sans text-[#6c757d] text-[1.25rem] font-light">Something short and leading about the collection below—its contents,<br>the creator, etc. Make it short and sweet, but not too short so folks don't<br>simply skip over it entirely.</p>
-            <div class="juli-hero-bttns-container bg-[#7FFFD4] w-fit h-fit my-2">
+            <div id="juli-hero-bttns-container" class="bg-[#7FFFD4] w-fit h-fit my-2">
                 <button class="w-[155.53px] h-[37.6px] bg-[#007bff] text-[#FFFFFF] font-sans font-normal rounded">Main call to action</button>
                 <button class="w-[146.8px] h-[37.6px] bg-[#6c757d] text-[#FFFFFF] font-sans font-normal rounded">Secondary action</button>
             </div>
+        </div>
+    </section>
+    <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#FFFFFF] flex justify-center items-center">
+        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300">
+
         </div>
     </section>
 </body>
