first thumbnail container created

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
     </section>
     <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#FFFFFF] flex justify-center items-center">
         <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300">
+<div class="juli-thumbnail-container w-[380px] h-[409.2px] bg-[#0069D9]">
+    <div class="juli-thumbnail-label">
 
+    </div>
+    <div class="juli-thumbnail-text-box">
+
+    </div>
+</div>
         </div>
     </section>
 </body>
