--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     </section>
     <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#FFFFFF] flex justify-center items-center">
         <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300">
-<div class="juli-thumbnail-container w-[380px] h-[409.2px] bg-[#0069D9]">
-    <div class="juli-thumbnail-label">
-
-    </div>
-    <div class="juli-thumbnail-text-box">
-
-    </div>
-</div>
+            <div class="juli-thumbnail-container w-[350px] h-[385.2px] bg-[#0069D9]">
+                <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C]">
+                    <img src="./assets/img/thumbnail.png" alt="thumbnail.png">
+                </div>
+                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5">
+                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
