sixth thumbnail box inserted

--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
                     </div>
                 </div>
             </div>
+            <div class="juli-thumbnail-container w-[350px] h-[385.2px] bg-[#0069D9] rounded flex flex-col justify-center items-center">
+                <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C] rounded-t">
+                    <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
+                </div>
+                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
+                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] bg-yellow-300 flex justify-between">
+                        <div class="juli-bttns-box w-[87.19px] h-[30.6px] bg-[#55595C] rounded flex">
+                            <button class="py-1 px-2 w-[47.13px] h-full text-center">View</button>
+                            <button class="py-1 px-2 w-[41.06px] h-full text-center">Edit</button>
+                        </div>
+                        <small class="juli-min-text">9 mins</small>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
