thumbnail boxes adjusted and centered

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </section>
     <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#FFFFFF] flex justify-center items-center">
-        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300 px-[15px] flex flex-wrap">
+        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300 px-[15px] flex flex-wrap justify-evenly items-center">
             <div class="juli-thumbnail-container w-[350px] h-[385.2px] bg-[#0069D9] rounded flex flex-col justify-center items-center">
                 <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C] rounded-t">
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
