view and edit buttons in thumbnail-box-six stylized and adjusted

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div id="juli-hero-container" class="w-[640px] h-[215.6px] bg-[#FFFFFF] flex flex-col justify-center items-center">
             <h1 class="text-[2.5rem] text-center text-light font-sans mb-2">Album example</h1>
             <p class="mb-4 text-center text-[20px] font-sans text-[#6c757d] text-[1.25rem] font-light">Something short and leading about the collection below—its contents,<br>the creator, etc. Make it short and sweet, but not too short so folks don't<br>simply skip over it entirely.</p>
-            <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
-                <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
-                <button class="py-1 px-2 w-[41.06px] h-full text-center bg-white rounded-r border border-solid border-[#6C757D] text-[14px]">Edit</button>
+            <div id="juli-hero-bttns-container" class="bg-[#7FFFD4] w-fit h-fit my-2">
+                <button class="w-[155.53px] h-[37.6px] bg-[#007bff] text-[#FFFFFF] font-sans font-normal rounded">Main call to action</button>
+                <button class="w-[146.8px] h-[37.6px] bg-[#6c757d] text-[#FFFFFF] font-sans font-normal rounded">Secondary action</button>
             </div>
         </div>
     </section>
@@ -118,9 +118,9 @@
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
                     <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] bg-yellow-300 flex justify-between">
-                        <div class="juli-bttns-box w-[87.19px] h-[30.6px] bg-[#55595C] rounded flex">
-                            <button class="py-1 px-2 w-[47.13px] h-full text-center">View</button>
-                            <button class="py-1 px-2 w-[41.06px] h-full text-center">Edit</button>
+                        <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
+                            <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
+                            <button class="py-1 px-2 w-[41.06px] h-full text-center bg-white rounded-r border border-solid border-[#6C757D] text-[14px]">Edit</button>
                         </div>
                         <small class="juli-min-text">9 mins</small>
                     </div>
