view-and-edit-buttons and small-text box stylized and adjusted

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
                     <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
-                    <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] bg-yellow-300 flex justify-between">
+                    <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
                             <button class="py-1 px-2 w-[41.06px] h-full text-center bg-white rounded-r border border-solid border-[#6C757D] text-[14px]">Edit</button>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
                     <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
-                    <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] bg-yellow-300 flex justify-between">
+                    <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
                             <button class="py-1 px-2 w-[41.06px] h-full text-center bg-white rounded-r border border-solid border-[#6C757D] text-[14px]">Edit</button>
