footer created and paragraphs inserted

--- a/index.html
+++ b/index.html
@@ -173,5 +173,14 @@
             </div>
         </div>
     </section>
+    <footer class="w-full h-[152px] bg-red-600 flex flex-col justify-center items-center">
+        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-yellow-300">
+            <div id="juli-p-1" class="flex justify-between mb-1">
+                <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
+                <a href="#">Back to top</a>
+            </div>
+            <p>New to Bootstrap? <a href="#">Visit the homepage</a> or read our <a href="#">getting started guide.</a></p>
+        </div>
+    </footer>
 </body>
 </html>
