--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
             </div>
         </nav>
     </header>
-    <section id="juli-hero-section" class="w-full h-[407.6px] bg-[#0069D9] py-24 px-8 flex justify-center items-center">
+    <section id="juli-hero-section" class="w-full h-[407.6px] bg-[#F8F9FA] py-24 px-8 flex justify-center items-center">
         <div id="juli-hero-container" class="w-[640px] h-[215.6px] bg-[#FFFFFF] flex flex-col justify-center items-center">
             <h1 class="text-[2.5rem] text-center text-light font-sans mb-2">Album example</h1>
             <p class="mb-4 text-center text-[20px] font-sans text-[#6c757d] text-[1.25rem] font-light">Something short and leading about the collection below—its contents,<br>the creator, etc. Make it short and sweet, but not too short so folks don't<br>simply skip over it entirely.</p>
-            <div id="juli-hero-bttns-container" class="bg-[#7FFFD4] w-fit h-fit my-2">
+            <div id="juli-hero-bttns-container" class="bg-[#F8F9FA] w-fit h-fit my-2">
                 <button class="w-[155.53px] h-[37.6px] bg-[#007bff] text-[#FFFFFF] font-sans font-normal rounded">Main call to action</button>
                 <button class="w-[146.8px] h-[37.6px] bg-[#6c757d] text-[#FFFFFF] font-sans font-normal rounded">Secondary action</button>
             </div>
         </div>
     </section>
-    <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#FFFFFF] flex justify-center items-center">
-        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-yellow-300 px-[15px] flex flex-wrap justify-evenly items-center">
-            <div class="juli-thumbnail-container w-[350px] h-[385.2px] bg-[#0069D9] rounded flex flex-col justify-center items-center">
+    <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#F8F9FA] flex justify-center items-center">
+        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-[#F8F9FA] px-[15px] flex flex-wrap justify-evenly items-center">
+            <div class="juli-thumbnail-container w-[350px] h-[385.2px] flex flex-col justify-center items-center">
                 <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C] rounded-t">
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
-                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
+                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
                     <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
@@ -173,13 +173,13 @@
             </div>
         </div>
     </section>
-    <footer class="w-full h-[152px] bg-red-600 flex flex-col justify-center items-center">
-        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-yellow-300">
+    <footer class="w-full h-[152px] flex flex-col justify-center items-center bg-[#F8F9FA]">
+        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-[#F8F9FA]">
             <div id="juli-p-1" class="flex justify-between mb-1">
-                <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-                <a href="#">Back to top</a>
+                <p class="text-[#6C757D]">Album example is © Bootstrap, but please download and customize it for yourself!</p>
+                <a href="#" class="text-[#0056B3]">Back to top</a>
             </div>
-            <p>New to Bootstrap? <a href="#">Visit the homepage</a> or read our <a href="#">getting started guide.</a></p>
+            <p class="text-[#6C757D] mb-1">New to Bootstrap? <a href="#" class="text-[#0056B3]">Visit the homepage</a> or read our <a href="#" class="text-[#0056B3]">getting started guide.</a></p>
         </div>
     </footer>
 </body>
