thumbnail-text-box-four bordered

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C] rounded-t">
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
-                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b">
+                <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
                     <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
