project finished non-responsive version 1

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
     </section>
     <section id="juli-central-section" class="w-full h-[1323.6px] bg-[#F8F9FA] flex justify-center items-center">
-        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-[#F8F9FA] px-[15px] flex flex-wrap justify-evenly items-center">
+        <div id="juli-central-container" class="w-[1140px] h-[1227.6px] bg-[#F8F9FA] px-[15px] flex flex-wrap justify-evenly items-center gap-x-7">
             <div class="juli-thumbnail-container w-[350px] h-[385.2px] flex flex-col justify-center items-center">
                 <div class="juli-thumbnail-label w-[350px] h-[225px] bg-[#55595C] rounded-t">
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -56,7 +56,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -71,7 +71,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -86,7 +86,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -101,7 +101,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -116,7 +116,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -131,7 +131,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -146,7 +146,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -161,7 +161,7 @@
                     <img class="rounded-t" src="./assets/img/thumbnail.png" alt="thumbnail.png">
                 </div>
                 <div class="juli-thumbnail-text-box bg-white w-[350px] h-[160.2px] p-5 rounded-b border border-solid border-[#DFDFDF]">
-                    <p class="text-center mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
+                    <p class="text-left mb-4">This is a wider card with supporting text<br>below as a natural lead-in to additional<br>content. This content is a little bit longer.</p>
                     <div class="juli-v-e-bttns-min-box w-[308.4px] h-[30.6px] flex justify-between items-center text-[#6C757D]">
                         <div class="juli-bttns-box w-[87.19px] h-[30.6px] flex rounded-r rounded-l">
                             <button class="py-1 px-2 w-[47.13px] h-full text-center bg-white rounded-l border border-solid border-[#6C757D] text-[14px]">View</button>
@@ -174,7 +174,7 @@
         </div>
     </section>
     <footer class="w-full h-[152px] flex flex-col justify-center items-center bg-[#F8F9FA]">
-        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-[#F8F9FA]">
+        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-[#F8F9FA] px-7">
             <div id="juli-p-1" class="flex justify-between mb-1">
                 <p class="text-[#6C757D]">Album example is © Bootstrap, but please download and customize it for yourself!</p>
                 <a href="#" class="text-[#0056B3]">Back to top</a>
