--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav id="juli-header-nav" class="bg-[#343A40] w-full h-[56px] flex items-center justify-center">
+        <nav class="bg-[#343A40] w-full h-[56px] flex items-center justify-center">
             <div id="juli-nit-burguer-box" class="w-[1140px] h-[40px] flex justify-between">
                 <div id="juli-nb-icon-title-box" class="flex items-center w-[90.58px] h-[40px] justify-center gap-2">
                     <img class="w-[28px] h-[28px]" src="./assets/img/camera-svgrepo-com.png" alt="camera-svgrepo-com">
@@ -24,7 +24,7 @@
             </div>
         </nav>
     </header>
-    <section id="juli-hero-section" class="w-full h-[407.6px] bg-[#F8F9FA] py-24 px-8 flex justify-center items-center">
+    <section id="juli-hero-section" class="w-full h-[407.6px] bg-[#FFFFFF] py-24 px-8 flex justify-center items-center">
         <div id="juli-hero-container" class="w-[640px] h-[215.6px] bg-[#FFFFFF] flex flex-col justify-center items-center">
             <h1 class="text-[2.5rem] text-center font-light font-sans mb-2">Album example</h1>
             <p class="mb-4 text-center text-[20px] font-sans text-[#6c757d] text-[1.25rem] font-light">Something short and leading about the collection below—its contents,<br>the creator, etc. Make it short and sweet, but not too short so folks don't<br>simply skip over it entirely.</p>
@@ -173,8 +173,8 @@
             </div>
         </div>
     </section>
-    <footer class="w-full h-[152px] flex flex-col justify-center items-center bg-[#F8F9FA]">
-        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-[#F8F9FA] px-7">
+    <footer class="w-full h-[152px] flex flex-col justify-center items-center bg-[#FFFFFF]">
+        <div id="juli-footer-container" class="w-[1140px] h-[52px] bg-[#FFFFFF] px-7">
             <div id="juli-p-1" class="flex justify-between mb-1">
                 <p class="text-[#6C757D]">Album example is © Bootstrap, but please download and customize it for yourself!</p>
                 <a href="#" class="text-[#0056B3]">Back to top</a>
